# static_lab_app

./: ._package.json  .dockerignore  .env.example  .gitignore  CODEX_HANDOFF.md  Dockerfile  LICENSE  PRODUCTION_SETUP.md  README.md  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  requirements.txt  tsconfig.json  vercel.json
.claude/: launch.json
api/: index.py
app/: design-frame.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  trackfood-app.tsx
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: test_api.py
public/: sw.js
public/design/: desktop.html  index.html
public/design/app/: desktop.jsx  desktop.jsx.bak  directions.jsx  directions2.jsx  directions3.jsx  main-navdock.jsx  main.jsx  screens-add.jsx  screens-home.jsx  screens-insights.jsx  screens-plan.jsx  theme.jsx  ui.jsx
scripts/: smoke-backend.mjs
