[project]
name = "static-lab-backend"
version = "1.0.0"
description = "FastAPI backend for static_lab."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "PyJWT>=2.9.0",
  "pytest>=8.3.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.pyright]
pythonVersion = "3.11"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
